# robopicker

./: .gitignore  .gitmodules  README.md  SIMULATION_ARCHITECTURE_PLAN.md  main.py  progress_journal.md  pyproject.toml
SO101/: README_COLLISION.md  pick_scene.xml  so101_new_calib.xml
SO101/assets/collision/: moving_jaw_so101_v1_hull_00.stl  moving_jaw_so101_v1_hull_01.stl  moving_jaw_so101_v1_hull_02.stl  moving_jaw_so101_v1_hull_03.stl  moving_jaw_so101_v1_hull_04.stl  moving_jaw_so101_v1_hull_05.stl  moving_jaw_so101_v1_hull_06.stl  moving_jaw_so101_v1_hull_07.stl  moving_jaw_so101_v1_hull_08.stl  moving_jaw_so101_v1_hull_09.stl  moving_jaw_so101_v1_hull_10.stl  moving_jaw_so101_v1_hull_11.stl  wrist_roll_follower_so101_v1_hull_00.stl  wrist_roll_follower_so101_v1_hull_01.stl  wrist_roll_follower_so101_v1_hull_02.stl  wrist_roll_follower_so101_v1_hull_03.stl  wrist_roll_follower_so101_v1_hull_04.stl  wrist_roll_follower_so101_v1_hull_05.stl  wrist_roll_follower_so101_v1_hull_06.stl  wrist_roll_follower_so101_v1_hull_07.stl  wrist_roll_follower_so101_v1_hull_08.stl  wrist_roll_follower_so101_v1_hull_09.stl  wrist_roll_follower_so101_v1_hull_10.stl  (+1 more)
configs/: cube_positions.json  so101_mujoco_record.yaml
datasets/anurizada__pick_n_place_sim_so_100/: splits.yaml
datasets/sherryxychen__2025-08-28_pick-and-place-block/: splits.yaml  stratified_sampling_config.yaml  stratified_sampling_output.yaml
docs/: gym_hil_wrapper_flow.md
robopicker/: __init__.py
robopicker/tests/: __init__.py  test_mujoco_render.py
testing_scripts/: test_episode_metadata.py
(+2 files in other folders)
