[project]
name = "robopicker"
version = "0.1.0"
description = "SO-101 MuJoCo Simulation for Pick and Place with LeRobot"
requires-python = ">=3.10,<3.13"
dependencies = [
    # MuJoCo physics engine (NOT included in lerobot base)
    "mujoco>=3.0.0,<4.0.0",
    # Scipy for numerical IK (alternative to placo)
    "scipy>=1.10.0",
    # LeRobot with kinematics (for placo IK)
    # Note: lerobot base includes: gymnasium, numpy, pynput, opencv, imageio
    "lerobot[kinematics]",
    # gym-hil for MuJoCo simulation environments
    "gym-hil",
    "matplotlib>=3.10.6",
]

[tool.uv.sources]
lerobot = { path = "lerobot", editable = true }
gym-hil = { path = "gym-hil", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

# SmolVLA policy dependencies (lerobot core deps come from workspace lerobot)
smolvla = [
    "lerobot[smolvla]",  # This pulls in all smolvla deps from the workspace lerobot
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["robopicker*"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
